defined all that noise

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
   <button id='<3' > ❤️ </button>
   <button id='pause' > pause </button>
 
-  <ul class='likes'></ul>
+  <ul class='likes'>
+    <li>shahin</li>
+    <li>matt</li>
+    <li>shahinagain</li>
+  </ul>
+
 
   <div>
     <h3>Comments</h3>
@@ -39,7 +44,7 @@
 
   </div>
 
-  <script src="index.min.js"></script>
+  <!-- <script src="index.min.js"></script> -->
   <script src="challenge.js"></script>
 </body>
 </html>
